testdata/baselines/reference/submodule/conformance/parserArrowFunctionExpression14.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
fileJs.js(1,1): error TS2304: Cannot find name 'a'.
fileJs.js(1,40): error TS2304: Cannot find name 'd'.
fileJs.js(1,46): error TS2304: Cannot find name 'e'.
fileTs.ts(1,1): error TS2304: Cannot find name 'a'.
fileTs.ts(1,40): error TS2304: Cannot find name 'd'.
fileTs.ts(1,46): error TS2304: Cannot find name 'e'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== fileJs.js (3 errors) ====
    a() ? (b: number, c?: string): void => d() : e; // Not legal JS; "Unexpected token ':'" at first colon
    ~
!!! error TS2304: Cannot find name 'a'.
                                           ~
!!! error TS2304: Cannot find name 'd'.
                                                 ~
!!! error TS2304: Cannot find name 'e'.
    
==== fileTs.ts (3 errors) ====
    a() ? (b: number, c?: string): void => d() : e;
    ~
!!! error TS2304: Cannot find name 'a'.
                                           ~
!!! error TS2304: Cannot find name 'd'.
                                                 ~
!!! error TS2304: Cannot find name 'e'.
    